--- a/Styles/style.css
+++ b/Styles/style.css
@@ -8,22 +8,29 @@ body {
 }
 main{
      display: flex;
-     justify-content: center;
+     flex-direction: column;
+     align-items: center;
 }
 .container {
   background-color: #ffffff;
   width: 870px;
   height: 679px;
   padding: 30px;
+  margin-top: 21px;
+  border-radius: 5px;
 }
 /* Top players style */
-.player-title{
+.section-title{
      color: #562EFF;
      font-size: 24px;
+     margin-top: 3px;
+    
 }
 .players {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  row-gap: 30px;
+  margin-bottom:21px;
 }
 .player {
   display: flex;
@@ -35,4 +42,65 @@ main{
 }
 .Player-name{
      margin-left: 16px;
+     font-size: 18px;
+}
+hr{
+  border: 1px solid #D1D1D1;
+  margin-bottom: 27px;
+
+}
+/*================
+  Top blogs style
+==================*/
+.blogs{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  row-gap: 26px;
+}
+.blog{
+  display: flex;
+}
+.thumbnail img{
+  width: 177px;
+  height: 117px;
+}
+.blog-info{
+  margin-left: 16px;
+}
+.blog-title{
+font-weight: 500px;
+font-size: 20px;
+color: #000000;
+}
+.blog-author{
+  color: #9F9F9F;
+  font-size: 16px;
+}
+.blog-author a{
+text-decoration: none;
+font-weight: 400;
+font-size: 16px;
+color: #562EFF;
+}
+/* ==============
+Latest course style
+===================*/
+.courses{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: ;
+}
+.course .course-banner img{
+width: 224px;
+height: 104px;
+}
+.course-info{
+  display: flex;
+  align-items: center;
+}
+.fa-star.filled{
+  color: #FFC014;
+}
+.fa-star.empty{
+  color: #AEAEAE; ;
 }
