--- a/Styles/style.css
+++ b/Styles/style.css
@@ -11,20 +11,18 @@ main{
      flex-direction: column;
      align-items: center;
 }
-.container {
+.container-1 {
   background-color: #ffffff;
   width: 870px;
-  height: 679px;
+  height: 600px;
   padding: 30px;
-  margin-top: 21px;
   border-radius: 5px;
 }
 /* Top players style */
 .section-title{
      color: #562EFF;
      font-size: 24px;
-     margin-top: 3px;
-    
+     margin-top: 3px; 
 }
 .players {
   display: grid;
@@ -85,10 +83,18 @@ color: #562EFF;
 /* ==============
 Latest course style
 ===================*/
+.container-2{
+  background-color: #ffffff;
+  padding: 30px;
+  margin-top: 21px;
+  border-radius: 5px;
+width: 870px;
+height: 350px;
+}
 .courses{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: ;
+  grid-column-gap: 24px;
 }
 .course .course-banner img{
 width: 224px;
@@ -97,10 +103,29 @@ height: 104px;
 .course-info{
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .fa-star.filled{
   color: #FFC014;
 }
 .fa-star.empty{
   color: #AEAEAE; ;
+}
+/* ------------
+Media Queries 
+--------------- */
+/* top players */
+
+@media screen and (max-width:576px) {
+  .container-1, .container-2{
+    height:100%;
+    width: 100%;
+  }
+  .players, .blogs, .courses{
+    grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+  }
+  .player, .blog, .course{
+    flex-direction: column;
+  }
 }
